11/28회의록 최종

--- a/meet_log/231128.md
+++ b/meet_log/231128.md
@@ -2,4 +2,47 @@
 1. like에 따른 position 인기 or company_name 인기
 2. 현재 시장에서 요구되는 기술이나 역량
 3. 어느 분야가 채용을 많이 하고 있는지
-4. 
+4. 많이 나오는 단어 : 인재상 이런 식으로 준비해야 한다
+
+혜연 : 
+Position(직무):
+
+분석 방향: 각 직무(Position)의 분포 및 빈도 분석, 어떤 직무가 가장 많은지 확인.
+데이터 기술: Hive나 Spark를 사용한 데이터 쿼리 및 집계.
+Company Name(회사명):
+
+분석 방향: 회사별로 채용 포지션의 분포를 확인하여 어떤 회사에서 어떤 포지션이 많이 요구되는지 분석.
+데이터 기술: Hive나 Spark를 사용한 데이터 쿼리.
+Description(업무 내용):
+
+분석 방향: 업무 내용에 사용된 주요 키워드 분석 및 자주 언급되는 기술 스택 확인.
+데이터 기술: Natural Language Processing(NLP)를 사용한 텍스트 마이닝, Spark의 MLlib 등.
+Requirement(자격 조건) 및 Preferred(우대사항):
+
+분석 방향: 자격 조건과 우대사항에 어떤 기술 스택이 많이 요구되는지 확인.
+데이터 기술: Hive나 Spark를 사용한 데이터 쿼리.
+Like(좋아요 수):
+
+분석 방향: 좋아요 수를 기준으로 어떤 포지션이 더 인기 있는지 분석.
+데이터 기술: Spark나 Hive를 사용하여 데이터 쿼리 및 시각화 도구 활용.
+
+
+현지 :
+- 인기 직무 예측: 좋아요 수로 어느 직종에 관심있어하는지 . 어느 회사가 제일 인기가 많은지, 회사 또는 직종등 과의 인기도간의 관계 (유명한 기업이 제일 인기가 있을줄 알았는데 사실은 ~)
+- 가장 활발하게 채용중인 회사
+- 현재 시장에서 직무별 요구되는 기술과 역량 파악 . 이를 위해 텍스트 마이닝과 자연어처리기술(NLP기술) 활용가능 (MapReduce?: 단어 빈도수 계산하는 WordCount프로그램 구현, Spark: NLP를 포함한 다양한 머신러닝 알고리즘 제공)
+- 어느 분야(백엔드,프론트엔드,데이터,모바일) 중 어느 분야가 제일 많이 채용하고 있는지
+- 근무지역? (추가로 크롤링해야함)
+- MapReduce, Spark => 데이터 처리
+- Pig, Hive => 데이터 분석
+--------------------------------
+TO DO LIST
+- pig로 position 분리하여 category(직무-백,프론트,데이터,모바일) 뽑아오기
+(간단)- category(직무)의 빈도수 분석 : Hive(or spark or mapreduce)사용
+- description 분석 : mapreduce등으로 wordcount
+- requirement 분석 : 위와 동일
+- preferred 분석 : 위와 동일
+- like 분석 : 위와 동일
+
+(간단)- wordcloud로 시각화
+- 5번의 추천시스템
