contents.csv utf-8-sig

--- a/TermProject.ipynb
+++ b/TermProject.ipynb
@@ -893,7 +893,7 @@
       },
       "outputs": [],
       "source": [
-        "contents.to_csv('contents.csv')"
+        "contents.to_csv('contents.csv', encoding=\"utf-8-sig\")"
       ]
     }
   ],
